@@ -37,11 +37,18 @@ ECL 0.9i
    the output of SI:GETCWD. This way we ensure that all filenames are absolute
    pathnames. [1]
 
+ - *LOAD-PATHNAME* contains the pathname as passed to LOAD, merged with
+   *DEFAULT-PATHNAME-DEFAULTS* but not with SI:GETCWD. In other words, according
+   to ANSI, it does not get the pathname as seen by the operating system.
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
    the output will reside. [1]
 
+ - ENSURE-GENERIC-FUNCTION relies on ENSURE-GENERIC-FUNCTION-USING-CLASS for
+   doing the real work of (re)defining generic functions. This means E-G-F now
+   handles :METHOD-CLASS and :GENERIC-FUNCTION-CLASS properly.
 
 * Notes:
 
